[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "tiny-retriever"
description = "A synchronous wrapper for AIOHTTP"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "aiofiles",
  "aiohttp>=3.8.6",
]
optional-dependencies.dev = [
  "aioresponses",
  "geopandas>=1",
  "ipykernel",
  "ipywidgets",
  "mapclassify",
  "matplotlib",
  "numpy>=2",
  "orjson",
  "pytest",
  "pytest-aiohttp",
  "pytest-asyncio",
  "rioxarray",
  "shapely>=2",
]
optional-dependencies.docs = [
  "jupytext",
  "mike>=2",
  "mkdocs>=1.6",
  "mkdocs-jupyter>=0.25,<0.26",
  "mkdocs-materialx",
  "mkdocstrings[python]>=0.27",
  "ruff",
]
optional-dependencies.json = [
  "orjson",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.test = [
  "aioresponses",
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
  "shapely>=2",
]
optional-dependencies.typecheck = [
  "pyright",
]
urls.Changelog = "https://cheginit.github.io/tiny-retriever/CHANGELOG"
urls.CI = "https://github.com/cheginit/tiny-retriever/actions"
urls.Homepage = "https://cheginit.github.io/tiny-retriever"
urls.Issues = "https://github.com/cheginit/tiny-retriever/issues"

[tool.hatch]
build.targets.wheel.packages = [
  "src/tiny_retriever",
]
version.source = "vcs"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [ ".pixi", "__pycache__" ]
lint.select = [ "ALL" ]
lint.ignore = [
  "A001",    # shadowing is fine
  "A002",    # shadowing is fine
  "A003",    # shadowing is fine
  "ANN",     # Mypy is better at this
  "ARG",     # unused arguments are normal when implementing interfaces
  "C901",    # we're complex software
  "COM",     # ruff format takes care of our commas
  "D",       # We prefer our own docstring style.
  "E501",    # leave line-length enforcement to ruff format
  "ERA001",  # we need to keep around some notes
  "FBT",     # we don't hate bool args around here
  "FIX",     # Yes, we want XXX as a marker.
  "ISC001",  # conflicts with ruff format
  "N",       # we need more naming freedom
  "PD",      # we're not pandas
  "PLC0415", # sometimes, imports have to live elsewhere
  "PLR0912", # we're complex software
  "PLR0913", # yes, many arguments, but most have defaults
  "PLR0915", # we're complex software
  "PLR2004", # numbers are sometimes fine
  "PLW0603", # sometimes we need globals
  "S307",    # eval FTW
  "SLF001",  # private members are accessed by friendly functions
  "TC",      # TYPE_CHECKING blocks break autodocs
  "TD",      # we don't follow other people's todo style
  "TRY301",  # I'm sorry, but this makes not sense for us.
  "UP006",   # replace Dict etc by dict etc later.
  "UP031",   # format() is slow as molasses; % and f'' FTW.
  "UP035",   # replace Dict etc by dict etc later.
]
lint.per-file-ignores."docs/*.py" = [
  "INP001", # no need for init files in docs
]
lint.per-file-ignores."tests/*.py" = [
  "B015",    # pointless comparison in tests aren't pointless
  "B017",    # pytest.raises(Exception) is fine
  "B018",    # pointless expressions in tests aren't pointless
  "BLE001",  # Blind excepts are fine in tests
  "DTZ",     # datetime best practices don't matter in tests
  "EM",      # no need for exception msg hygiene in tests
  "INP001",  # no need for init files in tests
  "PLE0309", # hash doesn't have to return anything in tests
  "PLR0124", # pointless comparison in tests aren't pointless
  "PLW1641", # it's OK to rely object's __hash__
  "PT011",   # broad is fine
  "PT012",   # sometimes we need more than a single stmt
  "RUF012",  # we don't do ClassVar annotations in tests
  "S",       # security concerns don't matter in tests
  "SIM201",  # sometimes we need to check `not ==`
  "SIM202",  # sometimes we need to check `not ==`
  "SIM300",  # Yoda rocks in asserts
  "TRY",     # exception best practices don't matter in tests
]
lint.extend-safe-fixes = [
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # Move imports
  "TC",
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [ "tiny_retriever" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.pixi,pixi.lock,**.ipynb"
ignore-words-list = "gage,gages"

[tool.pyproject-fmt]
expand_tables = [ "tool.git-cliff", "tool.pixi" ]

[tool.pyright]
pythonVersion = "3.10"
include = [ "src" ]
typeCheckingMode = "strict"
reportMissingSuperCall = false
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest]
ini_options.addopts = [
  "--import-mode=importlib",
  "-v",
  "--cov",
  "--cov-append",
  "--cov-branch",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--durations=5",
]
ini_options.doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
run.branch = true
run.parallel = true
run.source_pkgs = [
  "tiny_retriever",
]
paths.source = [ "src", "*/site-packages" ]
report.exclude_lines = [
  "if sys.platform",
  "if TYPE_CHECKING:",
]
report.ignore_errors = true
report.omit = [
  "**/__init__.py",
]

[tool.pixi.environments]
dev = { features = [ "dev", "py314" ] }
test310 = { features = [ "test", "json", "py310" ] }
test314 = { features = [ "test", "json", "py314" ] }
typecheck = { features = [ "typecheck", "json", "py314" ] }
lint = { features = [ "lint", "py314" ], no-default-feature = true }
docs = { features = [ "docs", "dev", "py314" ] }

[tool.pixi.feature.dev.dependencies]
git-cliff = "*"
libgdal-core = "*"

[tool.pixi.feature.dev.tasks]
# Preview unreleased changes without writing to CHANGELOG.md
changelog = "git cliff -c pyproject.toml --unreleased"
# Update CHANGELOG.md with all unreleased commits
changelog-update = "git cliff -c pyproject.toml -o CHANGELOG.md"

[tool.pixi.feature.docs.tasks]
docs-build = "mkdocs build --strict"
docs-serve = { cmd = "mkdocs serve", depends-on = [ "docs-build" ] }
docs-deploy = "mike deploy --push latest"
docs-release = "mike deploy --push --update-aliases $(git describe --tags --abbrev=0) stable"

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"

[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"

[tool.pixi.feature.test.tasks]
test = "pytest"
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "report" ] }

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"

[tool.pixi.pypi-dependencies]
tiny_retriever = { path = ".", editable = true }

[tool.pixi.tasks]
# Usage: pixi r release --version v0.3.0
release = { cmd = "git tag -a {{ version }} -m {{ version }} && git push && git push --tags", args = [
  { arg = "version" },
] }

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
"""
body = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% if version -%}
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
## [Unreleased]
{% endif -%}

{% for group, commits in commits | group_by(attribute="group") %}
### {{ group }}
{%- for commit in commits %}
- {% if commit.scope %}**{{ commit.scope }}**: {% endif %}\
{{ commit.message | split(pat="\\n") | first | upper_first | trim }}\
{% if commit.breaking %} (**breaking**){% endif %}\
{% if commit.remote.username %} by @{{ commit.remote.username }}{% endif %}\
{% if commit.remote.pr_number %} in \
[#{{ commit.remote.pr_number }}]({{ self::remote_url() }}/pull/{{ commit.remote.pr_number }})\
{% endif %}
{%- endfor %}
{% endfor %}

{%- if github.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
### New Contributors
{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) %}
- @{{ contributor.username }} made their first contribution\
{% if contributor.pr_number %} in \
[#{{ contributor.pr_number }}]({{ self::remote_url() }}/pull/{{ contributor.pr_number }})\
{% endif %}
{%- endfor %}
{% endif %}\n
"""
footer = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% for release in releases -%}
{% if release.version -%}
{% if release.previous.version -%}
[{{ release.version | trim_start_matches(pat="v") }}]: \
{{ self::remote_url() }}/compare/{{ release.previous.version }}...{{ release.version }}
{% endif -%}
{% else -%}
{% if release.previous.version -%}
[unreleased]: {{ self::remote_url() }}/compare/{{ release.previous.version }}...HEAD
{% endif -%}
{% endif -%}
{% endfor %}"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
  { message = "^feat", group = "Added" },
  { message = "^fix", group = "Fixed" },
  { message = "^perf", group = "Changed" },
  { message = "^refactor", group = "Changed" },
  { message = "^revert", group = "Fixed" },
  { message = "^style", group = "Changed" },
  { message = "^docs", skip = true },
  { message = "^test", skip = true },
  { message = "^chore", skip = true },
  { message = "^ci", skip = true },
  { message = "^build", skip = true },
  { message = "\\[skip ci\\]", skip = true },
  { message = "^Merge", skip = true },
]
protect_breaking_commits = true
filter_commits = false
tag_pattern = "v[0-9].*"
topo_order = false
sort_commits = "oldest"
